maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:27: error: object java.lang.String is not a value
  var g=String ="er"
        ^